# QtQmlfrontend-state-remains-synchronized-with-backend

./: CMakeLists.txt  Main.qml  README.txt  main.cpp  worker.cpp  worker.h
